--- a/Work/EURONEXT Finance Data Crawl/Nedtherlands Public Company Financial Information Crawling.ipynb
+++ b/Work/EURONEXT Finance Data Crawl/Nedtherlands Public Company Financial Information Crawling.ipynb
@@ -593,7 +593,7 @@
     "            info.append(name + \"(English: \" + name + \")\" + \" is a public company that is listed on EURONEXT AMSTERDAM(Netherlands).\")\n",
     "            info.append(name + \"(English: \" + name + \")\" + \" is a public company that is listed on EURONEXT AMSTERDAM(Netherlands).\")\n",
     "            info.append(name + \"(English: \" + name + \")\" + \" is a public company that is listed on EURONEXT AMSTERDAM(Netherlands). You can find more information on company's website.\")\n",
-    "            info.append(name + \"(English: \" + name + \")\" + \" ia a public company that is listed on EURONEXT AMSTERDAM(Netherlands). You can find more information on company's website.\")\n",
+    "            info.append(name + \"(English: \" + name + \")\" + \" is a public company that is listed on EURONEXT AMSTERDAM(Netherlands). You can find more information on company's website.\")\n",
     "        info.append(\"\")\n",
     "        info.append(\"\")\n",
     "        info.append(\"\")\n",
@@ -677,12 +677,12 @@
     "        info.append(name + \"(English: \" + name + \")\" + \" is a public company that is listed on EURONEXT AMSTERDAM(Netherlands).\")\n",
     "        info.append(name + \"(English: \" + name + \")\" + \" is a public company that is listed on EURONEXT AMSTERDAM(Netherlands).\")\n",
     "        info.append(name + \"(English: \" + name + \")\" + \" is a public company that is listed on EURONEXT AMSTERDAM(Netherlands). You can find more information on company's website.\")\n",
-    "        info.append(name + \"(English: \" + name + \")\" + \" ia a public company that is listed on EURONEXT AMSTERDAM(Netherlands). You can find more information on company's website.\")\n",
+    "        info.append(name + \"(English: \" + name + \")\" + \" is a public company that is listed on EURONEXT AMSTERDAM(Netherlands). You can find more information on company's website.\")\n",
     "        info.append(\"\")\n",
     "        info.append(\"\")\n",
     "        info.append(\"\")\n",
-    "        info.append(\"+31)\")\n",
-    "        info.append(\"+31)\")\n",
+    "        info.append(\"\")\n",
+    "        info.append(\"\")\n",
     "        info.append(\"\")\n",
     "        info.append(str(base_url + sub))\n",
     "        info.append(\"\")\n",
@@ -704,10 +704,10 @@
     "        info.append(\"CONTACT\")\n",
     "        info.append(\"CONTACT\")\n",
     "        info.append(\"\")\n",
-    "        info.append(\"+31)\")\n",
-    "        info.append(\"+31)\")\n",
+    "        info.append(\"\")\n",
+    "        info.append(\"\")\n",
     "        info.append(str(base_url + sub))\n",
-    "        info.append(\"+31)\")\n",
+    "        info.append(\"\")\n",
     "        \n",
     "    #재무정보\n",
     "    try:\n",
