--- a/Work/EURONEXT Finance Data Crawl/Nedtherlands Public Company Financial Information Crawling.ipynb
+++ b/Work/EURONEXT Finance Data Crawl/Nedtherlands Public Company Financial Information Crawling.ipynb
@@ -17,7 +17,7 @@
    "id": "8b04d19e",
    "metadata": {},
    "source": [
-    "### Utilized BS4 and Selenium Web for Crwaling - Visualized by Pandas"
+    "### Utilized BS4 and Selenium Web for Crawling - Visualized by Pandas"
    ]
   },
   {
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "cover = open('DutchData.csv','w', newline='', encoding='CP949')\n",
+    "cover = open('Netherlands_2022_EURONEXT_2022-05-23_Chris.csv','w', newline='', encoding='CP949')\n",
     "writing = csv.writer(cover)\n",
     "writing.writerow(['헤브론스타국가코드', '현지언어국가명','영문국가명','시간','대륙','GDP','인구','지역','기업식별코드','현지언어기업명','영문기업명','현지언어한줄소개내용','영문한줄소개내용','현지언어기업소개내용','영문기업소개내용','설립일자','법인등록번호','사업자등록번호','기업대표전화번호','대표팩스번호','대표이메일','기업홈페이지URL','페이스북URL','인스타그램URL','유튜브URL','링크드인URL','트위터핸들','현지언어기업주소','영문기업주소','현지언어기업상세주소','영문기업상세주소','기업우편번호','기업종업원','외감법인구분','기업연수','기업상태','현지언어담당자명','영문담당자명','현지언어직위명','영문직위명','담당자부서명','담당자전화번호','담당자팩스번호','담당자이메일','담당자이동전화번호','회계연도','유동자산금액','비유동자산금액','자산총계금액','유동부채금액','비유동부채금액','부채총계금액','자본총계금액','부채자본총계금액','매출액','매출원가금액','판매비관리비금액','영업이익손실금액','금융수익금액','금융비용금액','기타영업외수익금액','기타영업외비용금액','법인세차감전순이익','법인세비용','당기순이익','영업활동현금흐름금액','투자활동현금흐름금액','재무활동현금흐름금액','기초현금자산금액','기말현금자산금액','부채비율','영업이익율','매출액증가율','영업이익증가율','당기순이익 증가율','기업 CAGR','현지언어산업군명','영문산업군명','현지언어주요제품명내용','영문주요제품명내용','국가언어코드','현지언어언어명','영문언어명','주식시장코드','현지언어주식시장명','영문주식시장명','상장코드','상장일자','주가(일)','주가(1주)','주가(1개월)','주가(6개월)','주가(1년)','주가(3년)','주가(5년)','주가(10년)','거래량','시가총액','지점코드','지점명','주소','주소상세','우편번호','사업자등록번호','이벤트','통화구분코드','화폐단위명','담당자','소스','날짜'])"
    ]
