--- a/Work/EURONEXT Finance Data Crawl/Belgium Public Company Financial Information Crawling.ipynb
+++ b/Work/EURONEXT Finance Data Crawl/Belgium Public Company Financial Information Crawling.ipynb
@@ -17,7 +17,7 @@
    "id": "5d8a426d",
    "metadata": {},
    "source": [
-    "### Utilized BS4 and Selenium Web for Crwaling - Visualized by Pandas"
+    "### Utilized BS4 and Selenium Web for Crawling - Visualized by Pandas"
    ]
   },
   {
