--- a/Public Projects/Investing/Singapore Financial Information Crawler.ipynb
+++ b/Public Projects/Investing/Singapore Financial Information Crawler.ipynb
@@ -2,31 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0d8958b8",
+   "id": "8a7ffc26",
    "metadata": {},
    "source": [
-    "# Singapore Public Company Financial Information Crawler"
+    "## Singapore Public Company Financial Information Crawler\n",
+    "##### Last Update: 2022-08-02\n",
+    "#### Author: Wonho Lim \n",
+    "#### E-mail: wonholim02@gmail.com\n",
+    "#### Python Version: Python 3.10.4 (ipykernel)\n",
+    "#### Chrome Version: Chrome 103.0.5060.134 (64-bit)\n",
+    "#### Chrome Driver Version: ChromeDriver 103.0.5060.134\n",
+    "\n",
+    "#### Crawled Website\n",
+    "Investing.com MAIN: https://www.investing.com /\n",
+    "Investing.com Singapore: https://www.investing.com/equities/singapore\n",
+    "\n",
+    "Description: This is public company financial statement web crawling code for investing.com, especially for companies in \n",
+    "Singapore. investing.com is an unofficial stock information website for countries around the world. Even though it is an unofficial website, comparably, it has decent amount of information including key financial values. However, the server itself is very unstable that loading error occurs a lot, and data table format/language format is not standardized that a lot of exceptions are made(goes to failList). So one should be aware of that, and it is better to find alternative source for a long term development. Using excel format instead of csv could be a solution, which I have not tried so far. This code can be reused for other countries by editing initial website address and several page setting button XPATH locations - Colombia, Indonesia, Italy, Sinbgapore, and Spain is already written and uploaded. For crawling, as long as the website has not been modified, the code below must be run properly if and only if it is run in an order. Moreover, environment setting must be fixed based on user's computer/server setting and location."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65b21b98",
+   "id": "14911bf4",
    "metadata": {},
    "source": [
-    "### = Crawling Source: https://www.investing.com/"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f3c69a49",
-   "metadata": {},
-   "source": [
-    "## Main Crawler"
+    "### 1. Importing useful open source librabries - utilized BS4 and Selenium Web Driver for crawling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6d67fd2a",
    "metadata": {
     "scrolled": true
@@ -49,25 +54,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "61cabad8",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.9.12\n",
-      "1.4.2\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "9335e355",
+   "metadata": {},
    "source": [
-    "print(python_version())\n",
-    "print(pd.__version__)"
+    "### 2. Environment\n",
+    "#### - Chromdriver must be located in local/cloud PC folder.\n",
+    "#### - One can download proper version at: chromedriver.chromium.org/downloads\n",
+    "#### - Path should be modified based on local environment"
    ]
   },
   {
@@ -99,9 +93,14 @@
    "id": "3e8e9917",
    "metadata": {},
    "source": [
-    "### Main Crawling code\n",
-    "#### Path should be modified\n",
-    "#### Condition in for loop should be changed based on part we need to get"
+    "### 3. Main Crawler\n",
+    "#### - Uncollectable or unavailable data was collected as \"\" for convenience.\n",
+    "#### - Data Cleansing might be required after crawling sometiems, but it will not be tough as one knows how to use excel.\n",
+    "#### - Some directions and explanations are written as comment below.\n",
+    "#### - The order of append must be depend on the order of column name assigned above.\n",
+    "#### - Lots of try-except function is used to avoid error caused by non-existing pages or information.\n",
+    "#### - One also need to avoid ad and accept cookie banner that randomly appears.\n",
+    "#### - Run the crawler many times to improve the accuracy - Detail is written below main crawler."
    ]
   },
   {
@@ -2998,17 +2997,20 @@
     }
    ],
    "source": [
-    "#Yahoo\n",
+    "# Basic Setting\n",
     "failList = []\n",
     "info = []\n",
     "driver = webdriver.Chrome(path)\n",
     "base_url = \"https://www.investing.com\"\n",
     "driver.get('https://www.investing.com/equities/singapore')\n",
+    "# Avoid Ad\n",
     "try:\n",
     "    driver.find_element(By.XPATH, value='/html/body/div[5]/div[2]/i').click()\n",
     "except:\n",
     "    print(\"pass\")\n",
     "time.sleep(2)\n",
+    "\n",
+    "# Get each company's link using href in a tag\n",
     "text = driver.page_source\n",
     "time.sleep(2)\n",
     "soup = bs4.BeautifulSoup(text,'html.parser')\n",
@@ -3018,10 +3020,12 @@
     "print(maintable)\n",
     "company_links = []\n",
     "\n",
+    "# We have to process the collected data again because of their data structure\n",
     "for a in all_atag_maintable:\n",
     "    company_link = a.attrs[\"href\"]\n",
     "    company_links.append(company_link)\n",
-    "    \n",
+    "\n",
+    "# Main Data Collection code\n",
     "for sub in company_links:\n",
     "    try:\n",
     "        info = []\n",
@@ -3035,7 +3039,7 @@
     "        time.sleep(4)\n",
     "        #이름\n",
     "        name = driver.find_element(By.XPATH, value='/html/body/div/div[2]/div/div/div[2]/main/div/div[1]/div[1]/h1').text\n",
-    "        #국가코드\n",
+    "        #국가정보\n",
     "        info.append(\"SGP\") \n",
     "        info.append(\"Singapore\") \n",
     "        info.append(\"Singapore\") \n",
@@ -3045,7 +3049,7 @@
     "        info.append(\"5453600\") \n",
     "        info.append(\"동남아시아\") \n",
     "\n",
-    "        #기업\n",
+    "        #기업코드\n",
     "        try:\n",
     "            info.append(driver.find_element(By.XPATH, value='/html/body/div/div[2]/div/div/div[2]/main/div/div[1]/div[4]/ul/li[3]/span[2]').text) \n",
     "        except:\n",
@@ -3460,6 +3464,17 @@
     "        failList.append(base_url + sub)\n",
     "            \n",
     "print(failList)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9eb7043",
+   "metadata": {},
+   "source": [
+    "### 4. Dealing with FailList\n",
+    "#### - Because Investing.com causes loading time error due to unstable server status, it is better to run the code, at least with companies in failList, for several times or run with two or more computers. That will increase the sucess rate much higher than running the code once. When running a new code, make sure to change the name of saving file so that you don't replace the original file.\n",
+    "#### - There are many ways to deal with elements failList: retry(if caused by server loading status), ignore(if caused by actually non-existing data), manually add(if only few exist), find why error has occurred(if massive).\n",
+    "#### - Below is both actual and sample code that was used in 2022"
    ]
   },
   {
@@ -5141,7 +5156,6 @@
     }
    ],
    "source": [
-    "#Yahoo\n",
     "failList2 = []\n",
     "info = []\n",
     "driver = webdriver.Chrome(path)\n",
@@ -5595,7 +5609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9c0515",
+   "id": "2275f277",
    "metadata": {},
    "outputs": [],
    "source": []
