--- a/Public Projects/Investing/Spain Financial Information Crawler.ipynb
+++ b/Public Projects/Investing/Spain Financial Information Crawler.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8a7ffc26",
+   "metadata": {},
+   "source": [
+    "## Spain Public Company Financial Information Crawler\n",
+    "##### Last Update: 2022-08-02\n",
+    "#### Author: Wonho Lim \n",
+    "#### E-mail: wonholim02@gmail.com\n",
+    "#### Python Version: Python 3.10.4 (ipykernel)\n",
+    "#### Chrome Version: Chrome 103.0.5060.134 (64-bit)\n",
+    "#### Chrome Driver Version: ChromeDriver 103.0.5060.134\n",
+    "\n",
+    "#### Crawled Website\n",
+    "Investing.com MAIN: https://www.investing.com /\n",
+    "Investing.com Spain: https://www.investing.com/equities/spain\n",
+    "\n",
+    "Description: This is public company financial statement web crawling code for investing.com, especially for companies in Spain. investing.com is an unofficial stock information website for countries around the world. Even though it is an unofficial website, comparably, it has decent amount of information including key financial values. However, the server itself is very unstable that loading error occurs a lot, and data table format/language format is not standardized that a lot of exceptions are made(goes to failList). So one should be aware of that, and it is better to find alternative source for a long term development. Using excel format instead of csv could be a solution, which I have not tried so far. This code can be reused for other countries by editing initial website address and several page setting button XPATH locations - Colombia, Indonesia, Italy, Sinbgapore, and Spain is already written and uploaded. For crawling, as long as the website has not been modified, the code below must be run properly if and only if it is run in an order. Moreover, environment setting must be fixed based on user's computer/server setting and location."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3279817d",
+   "metadata": {},
+   "source": [
+    "### 1. Importing useful open source librabries - utilized BS4 and Selenium Web Driver for crawling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "d7939755",
@@ -20,6 +48,17 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support.select import Select\n",
     "from selenium.webdriver.common.by import By"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca075bc9",
+   "metadata": {},
+   "source": [
+    "### 2. Environment\n",
+    "#### - Chromdriver must be located in local/cloud PC folder.\n",
+    "#### - One can download proper version at: chromedriver.chromium.org/downloads\n",
+    "#### - Path should be modified based on local environment### "
    ]
   },
   {
@@ -46,6 +85,21 @@
     "path = r'C:\\Users\\user\\Desktop\\자료\\chromedriver'\n",
     "writing = csv.writer(cover)\n",
     "writing.writerow(['헤브론스타국가코드','현지언어국가명','영문국가명','시간','대륙','GDP','인구','지역','기업식별코드','현지언어기업명','영문기업명','현지언어한줄소개내용','영문한줄소개내용','현지언어기업소개내용','영문기업소개내용','설립일자','법인등록번호','사업자등록번호','기업대표전화번호','대표팩스번호','대표이메일','기업홈페이지URL','페이스북URL','인스타그램URL','유튜브URL','링크드인URL','트위터핸들','현지언어기업주소','영문기업주소','현지언어기업상세주소','영문기업상세주소','기업우편번호','기업종업원','외감법인구분','기업연수','기업상태','현지언어담당자명','영문담당자명','현지언어직위명','영문직위명','담당자부서명','담당자전화번호','담당자팩스번호','담당자이메일','담당자이동전화번호','회계연도','유동자산금액','비유동자산금액','자산총계금액','유동부채금액','비유동부채금액','부채총계금액','자본총계금액','부채자본총계금액','매출액','매출원가금액','판매비관리비금액','영업이익손실금액','금융수익금액','금융비용금액','기타영업외수익금액','기타영업외비용금액','법인세차감전순이익','법인세비용','당기순이익','영업활동현금흐름금액','투자활동현금흐름금액','재무활동현금흐름금액','기초현금자산금액','기말현금자산금액','부채비율','영업이익율','매출액증가율','영업이익증가율','당기순이익 증가율','기업 CAGR','현지언어산업군명','영문산업군명','현지언어주요제품명내용','영문주요제품명내용','국가언어코드','현지언어언어명','영문언어명','주식시장코드','현지언어주식시장명','영문주식시장명','상장코드','상장일자','주가(일)','주가(1주)','주가(1개월)','주가(6개월)','주가(1년)','주가(3년)','주가(5년)','주가(10년)','거래량','시가총액','지점코드','지점명','주소','주소상세','우편번호','사업자등록번호','이벤트','통화구분코드','화폐단위명','담당자','소스','날짜'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6bd746d",
+   "metadata": {},
+   "source": [
+    "### 3. Main Crawler\n",
+    "#### - Uncollectable or unavailable data was collected as \"\" for convenience.\n",
+    "#### - Data Cleansing might be required after crawling sometiems, but it will not be tough as one knows how to use excel.\n",
+    "#### - Some directions and explanations are written as comment below.\n",
+    "#### - The order of append must be depend on the order of column name assigned above.\n",
+    "#### - Lots of try-except function is used to avoid error caused by non-existing pages or information.\n",
+    "#### - One also need to avoid ad and accept cookie banner that randomly appears.\n",
+    "#### - Run the crawler many times to improve the accuracy - Detail is written below main crawler."
    ]
   },
   {
@@ -1287,20 +1341,23 @@
     }
    ],
    "source": [
+    "# Basic Setting\n",
     "failList = []\n",
     "info = []\n",
     "driver = webdriver.Chrome(path)\n",
     "base_url = \"https://www.investing.com\"\n",
     "driver.get('https://www.investing.com/equities/spain')\n",
+    "# Avoid Ad\n",
     "try:\n",
     "    driver.find_element(By.XPATH, value='/html/body/div[5]/div[2]/i').click()\n",
     "except:\n",
     "    print(\"pass\")\n",
-    "\n",
     "driver.find_element(By.XPATH, value='/html/body/div[4]/section/div[6]/select').click()\n",
     "time.sleep(1)\n",
     "driver.find_element(By.XPATH, value='/html/body/div[4]/section/div[6]/select/option[1]').click()\n",
     "time.sleep(4)\n",
+    "\n",
+    "# Get each company's link using href in a tag\n",
     "text = driver.page_source\n",
     "time.sleep(1)\n",
     "soup = bs4.BeautifulSoup(text,'html.parser')\n",
@@ -1310,10 +1367,12 @@
     "print(maintable)\n",
     "company_links = []\n",
     "\n",
+    "# We have to process the collected data again because of their data structure\n",
     "for a in all_atag_maintable:\n",
     "    company_link = a.attrs[\"href\"]\n",
     "    company_links.append(company_link)\n",
-    "    \n",
+    "\n",
+    "# Main Data Collection code\n",
     "for sub in company_links:\n",
     "    try:\n",
     "        info = []\n",
@@ -1327,7 +1386,7 @@
     "        time.sleep(4)\n",
     "        #이름\n",
     "        name = driver.find_element(By.XPATH, value='/html/body/div/div[2]/div/div/div[2]/main/div/div[1]/div[1]/h1').text\n",
-    "        #국가코드\n",
+    "        #국가정보\n",
     "        info.append(\"ESP\") \n",
     "        info.append(\"Espana\") \n",
     "        info.append(\"Spain\") \n",
@@ -1337,7 +1396,7 @@
     "        info.append(\"47450795\") \n",
     "        info.append(\"서유럽\") \n",
     "\n",
-    "        #기업\n",
+    "        #기업코드\n",
     "        try:\n",
     "            info.append(driver.find_element(By.XPATH, value='/html/body/div/div[2]/div/div/div[2]/main/div/div[1]/div[4]/ul/li[3]/span[2]').text) \n",
     "        except:\n",
@@ -1752,6 +1811,17 @@
     "        failList.append(base_url + sub)\n",
     "            \n",
     "print(failList)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3ab3e23",
+   "metadata": {},
+   "source": [
+    "### 4. Dealing with FailList\n",
+    "#### - Because Investing.com causes loading time error due to unstable server status, it is better to run the code, at least with companies in failList, for several times or run with two or more computers. That will increase the sucess rate much higher than running the code once. When running a new code, make sure to change the name of saving file so that you don't replace the original file.\n",
+    "#### - There are many ways to deal with elements failList: retry(if caused by server loading status), ignore(if caused by actually non-existing data), manually add(if only few exist), find why error has occurred(if massive).\n",
+    "#### - Below is both actual and sample code that was used in 2022"
    ]
   },
   {
@@ -2495,7 +2565,7 @@
     }
    ],
    "source": [
-    "#Yahoo\n",
+    "# Basic Setting\n",
     "failList2 = []\n",
     "info = []\n",
     "driver = webdriver.Chrome(path)\n",
@@ -3859,7 +3929,6 @@
     }
    ],
    "source": [
-    "#Yahoo\n",
     "failList3 = []\n",
     "info = []\n",
     "driver = webdriver.Chrome(path)\n",
@@ -5108,7 +5177,6 @@
     }
    ],
    "source": [
-    "#Yahoo\n",
     "failList4 = []\n",
     "info = []\n",
     "driver = webdriver.Chrome(path)\n",
@@ -6416,7 +6484,6 @@
     }
    ],
    "source": [
-    "#Yahoo\n",
     "failList5 = []\n",
     "info = []\n",
     "driver = webdriver.Chrome(path)\n",
@@ -6885,14 +6952,6 @@
    "source": [
     "print(len(failList5))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42e247c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
