--- a/Public Projects/Investing/Colombia Financial Information Crawler.ipynb
+++ b/Public Projects/Investing/Colombia Financial Information Crawler.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8a7ffc26",
+   "metadata": {},
+   "source": [
+    "## Colombia Public Company Financial Information Crawler\n",
+    "##### Last Update: 2022-08-02\n",
+    "#### Author: Wonho Lim \n",
+    "#### E-mail: wonholim02@gmail.com\n",
+    "#### Python Version: Python 3.10.4 (ipykernel)\n",
+    "#### Chrome Version: Chrome 103.0.5060.134 (64-bit)\n",
+    "#### Chrome Driver Version: ChromeDriver 103.0.5060.134\n",
+    "\n",
+    "#### Crawled Website\n",
+    "Investing.com MAIN: https://www.investing.com /\n",
+    "Investing.com Colombia: https://www.investing.com/equities/colombia\n",
+    "\n",
+    "Description: This is public company financial statement web crawling code for investing.com, especially for companies in Colombia. investing.com is an unofficial stock information website for countries around the world. Even though it is an unofficial website, comparably, it has decent amount of information including key financial values. However, the server itself is very unstable that loading error occurs a lot, and data table format/language format is not standardized that a lot of exceptions are made(goes to failList). So one should be aware of that, and it is better to find alternative source for a long term development. Using excel format instead of csv could be a solution, which I have not tried so far. This code can be reused for other countries by editing initial website address and several page setting button XPATH locations - Colombia, Indonesia, Italy, Sinbgapore, and Spain is already written and uploaded. For crawling, as long as the website has not been modified, the code below must be run properly if and only if it is run in an order. Moreover, environment setting must be fixed based on user's computer/server setting and location."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9916aa19",
+   "metadata": {},
+   "source": [
+    "### 1. Importing useful open source librabries - utilized BS4 and Selenium Web Driver for crawling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "cd772081",
@@ -20,6 +48,17 @@
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.support.select import Select\n",
     "from selenium.webdriver.common.by import By"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbc69cf6",
+   "metadata": {},
+   "source": [
+    "### 2. Environment\n",
+    "#### - Chromdriver must be located in local/cloud PC folder.\n",
+    "#### - One can download proper version at: chromedriver.chromium.org/downloads\n",
+    "#### - Path should be modified based on local environment"
    ]
   },
   {
@@ -47,26 +86,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec72a0a5",
+   "metadata": {},
+   "source": [
+    "### 3. Main Crawler\n",
+    "#### - Uncollectable or unavailable data was collected as \"\" for convenience.\n",
+    "#### - Data Cleansing might be required after crawling sometiems, but it will not be tough as one knows how to use excel.\n",
+    "#### - Some directions and explanations are written as comment below.\n",
+    "#### - The order of append must be depend on the order of column name assigned above.\n",
+    "#### - Lots of try-except function is used to avoid error caused by non-existing pages or information.\n",
+    "#### - One also need to avoid ad and accept cookie banner that randomly appears.\n",
+    "#### - Run the crawler many times to improve the accuracy - Detail is written below main crawler."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "79f90f85",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Basic Setting\n",
     "failList = []\n",
     "info = []\n",
+    "\n",
+    "# Get EURONEXT Brussels Stock Website\n",
     "driver = webdriver.Chrome(path)\n",
     "base_url = \"https://www.investing.com\"\n",
     "driver.get('https://www.investing.com/equities/colombia')\n",
+    "# Avoid Ad\n",
     "try:\n",
     "    driver.find_element(By.XPATH, value='/html/body/div[5]/div[2]/i').click()\n",
     "except:\n",
     "    print(\"pass\")\n",
-    "\n",
     "driver.find_element(By.XPATH, value='/html/body/div[4]/section/div[6]/select').click()\n",
     "time.sleep(2)\n",
     "driver.find_element(By.XPATH, value='/html/body/div[4]/section/div[6]/select/option[1]').click()\n",
     "time.sleep(4)\n",
+    "\n",
+    "# Get each company's link using href in a tag\n",
     "text = driver.page_source\n",
     "time.sleep(2)\n",
     "soup = bs4.BeautifulSoup(text,'html.parser')\n",
@@ -76,10 +135,12 @@
     "print(maintable)\n",
     "company_links = []\n",
     "\n",
+    "# We have to process the collected data again because of their data structure\n",
     "for a in all_atag_maintable:\n",
     "    company_link = a.attrs[\"href\"]\n",
     "    company_links.append(company_link)\n",
-    "    \n",
+    "\n",
+    "# Main Data Collection code\n",
     "for sub in company_links:\n",
     "    try:\n",
     "        info = []\n",
@@ -519,6 +580,24 @@
     "            \n",
     "print(failList)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed4c27bd",
+   "metadata": {},
+   "source": [
+    "### 4. Dealing with FailList\n",
+    "#### - Because Investing.com causes loading time error due to unstable server status, it is better to run the code, at least with companies in failList, for several times or run with two or more computers. That will increase the sucess rate much higher than running the code once. When running a new code, make sure to change the name of saving file so that you don't replace the original file.\n",
+    "#### - There are many ways to deal with elements failList: retry(if caused by server loading status), ignore(if caused by actually non-existing data), manually add(if only few exist), find why error has occurred(if massive)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af5bbf78",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
