Update AI Recommendation Model.ipynb

--- a/Artificial Intelligence/AI Recommendation Model.ipynb
+++ b/Artificial Intelligence/AI Recommendation Model.ipynb
@@ -5,7 +5,7 @@
    "id": "1b99d79e",
    "metadata": {},
    "source": [
-    "# AI Recommendation Model NSP2 Testing\n",
+    "# AI Recommendation Model Testing\n",
     "\n",
     "### Author: Wonho Lim\n",
     "\n",
